--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
       --good: #859900;
       --bad: #dc322f;
       --shadow: 0 20px 50px rgba(88,110,117,0.18);
+      --glow-1: rgba(38,139,210,0.12);
+      --glow-2: rgba(203,75,22,0.1);
+      --card-glow-1: rgba(38,139,210,0.14);
+      --card-glow-2: rgba(42,161,152,0.12);
+      --ui-surface: rgba(253,246,227,0.75);
+      --ui-surface-active: #fdf6e3;
+      --ui-border: rgba(88,110,117,0.2);
+      --ui-text: #839496;
+      --ui-text-active: #586e75;
+      --ui-shadow: 0 6px 14px rgba(88,110,117,0.18);
+      --ui-hover-border: rgba(38,139,210,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(38,139,210,0.16);
+      --btn-surface: #fdf6e3;
+      --box-surface: #fdf6e3;
+      --box-text: #586e75;
       --root-min: 24px;
       --root-vw: 3.5vw;
       --root-max: 44px;
@@ -26,7 +41,7 @@
       --box-font-mobile: 16px;
     }
 
-    .theme-dark {
+    body.theme-solarized.theme-dark {
       --bg1: #002b36;
       --bg2: #073642;
       --ink: #eee8d5;
@@ -38,6 +53,79 @@
       --good: #859900;
       --bad: #dc322f;
       --shadow: 0 24px 60px rgba(0, 0, 0, 0.5);
+      --glow-1: rgba(38,139,210,0.18);
+      --glow-2: rgba(203,75,22,0.16);
+      --card-glow-1: rgba(38,139,210,0.2);
+      --card-glow-2: rgba(203,75,22,0.18);
+      --ui-surface: rgba(7,54,66,0.85);
+      --ui-surface-active: #0b3944;
+      --ui-border: rgba(147,161,161,0.35);
+      --ui-text: #93a1a1;
+      --ui-text-active: #eee8d5;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(147,161,161,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #073642;
+      --box-surface: #586e75;
+      --box-text: #fdf6e3;
+    }
+
+    body.theme-nord {
+      --bg1: #eceff4;
+      --bg2: #e5e9f0;
+      --ink: #2e3440;
+      --muted: #4c566a;
+      --accent: #5e81ac;
+      --accent-2: #8fbcbb;
+      --card: #f1f3f7;
+      --line: rgba(46,52,64,0.16);
+      --good: #a3be8c;
+      --bad: #bf616a;
+      --shadow: 0 20px 50px rgba(46,52,64,0.18);
+      --glow-1: rgba(94,129,172,0.16);
+      --glow-2: rgba(136,192,208,0.12);
+      --card-glow-1: rgba(94,129,172,0.16);
+      --card-glow-2: rgba(143,188,187,0.12);
+      --ui-surface: rgba(236,239,244,0.8);
+      --ui-surface-active: #eceff4;
+      --ui-border: rgba(46,52,64,0.16);
+      --ui-text: #4c566a;
+      --ui-text-active: #2e3440;
+      --ui-shadow: 0 6px 14px rgba(46,52,64,0.18);
+      --ui-hover-border: rgba(94,129,172,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(46,52,64,0.18);
+      --btn-surface: #eceff4;
+      --box-surface: #eceff4;
+      --box-text: #2e3440;
+    }
+
+    body.theme-nord.theme-dark {
+      --bg1: #2e3440;
+      --bg2: #3b4252;
+      --ink: #e5e9f0;
+      --muted: #d8dee9;
+      --accent: #88c0d0;
+      --accent-2: #8fbcbb;
+      --card: #434c5e;
+      --line: rgba(236,239,244,0.14);
+      --good: #a3be8c;
+      --bad: #bf616a;
+      --shadow: 0 24px 60px rgba(0, 0, 0, 0.45);
+      --glow-1: rgba(136,192,208,0.18);
+      --glow-2: rgba(143,188,187,0.16);
+      --card-glow-1: rgba(136,192,208,0.2);
+      --card-glow-2: rgba(191,97,106,0.16);
+      --ui-surface: rgba(67,76,94,0.9);
+      --ui-surface-active: #4c566a;
+      --ui-border: rgba(236,239,244,0.2);
+      --ui-text: #d8dee9;
+      --ui-text-active: #eceff4;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(136,192,208,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #4c566a;
+      --box-surface: #4c566a;
+      --box-text: #eceff4;
     }
 
     @font-face {
@@ -70,8 +158,8 @@
     body {
       margin: 0;
       color: var(--ink);
-      background: radial-gradient(1200px 800px at 10% -10%, rgba(38,139,210,0.12) 0%, transparent 60%),
-                  radial-gradient(900px 900px at 110% 10%, rgba(203,75,22,0.1) 0%, transparent 60%),
+      background: radial-gradient(1200px 800px at 10% -10%, var(--glow-1) 0%, transparent 60%),
+                  radial-gradient(900px 900px at 110% 10%, var(--glow-2) 0%, transparent 60%),
                   linear-gradient(160deg, var(--bg1), var(--bg2));
       min-height: 100vh;
       font-family: "Source Han Sans SC", "Microsoft YaHei", "PingFang SC", "Heiti SC", sans-serif;
@@ -81,9 +169,6 @@
     }
 
     body.theme-dark {
-      background: radial-gradient(1200px 800px at 10% -10%, rgba(38,139,210,0.18) 0%, transparent 60%),
-                  radial-gradient(900px 900px at 110% 10%, rgba(203,75,22,0.16) 0%, transparent 60%),
-                  linear-gradient(160deg, var(--bg1), var(--bg2));
       color-scheme: dark;
     }
 
@@ -155,13 +240,8 @@
       gap: 4px;
       padding: 3px;
       border-radius: 999px;
-      border: 1px solid var(--line);
-      background: rgba(253, 246, 227, 0.75);
-    }
-
-    body.theme-dark .mode-switch {
-      background: rgba(7, 54, 66, 0.85);
-      border-color: rgba(147, 161, 161, 0.35);
+      border: 1px solid var(--ui-border);
+      background: var(--ui-surface);
     }
 
     .mode-btn {
@@ -170,25 +250,15 @@
       padding: 4px 10px;
       border-radius: 999px;
       font-size: 12px;
-      color: var(--muted);
+      color: var(--ui-text);
       cursor: pointer;
       transition: color 120ms ease, background-color 120ms ease, box-shadow 120ms ease;
     }
 
     .mode-btn.is-active {
-      color: var(--ink);
-      background: #fdf6e3;
-      box-shadow: 0 6px 14px rgba(88, 110, 117, 0.18);
-    }
-
-    body.theme-dark .mode-btn {
-      color: #93a1a1;
-    }
-
-    body.theme-dark .mode-btn.is-active {
-      color: #eee8d5;
-      background: #0b3944;
-      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      color: var(--ui-text-active);
+      background: var(--ui-surface-active);
+      box-shadow: var(--ui-shadow);
     }
 
     .size-controls {
@@ -198,18 +268,18 @@
     }
 
     .size-btn {
-      border: 1px solid var(--line);
-      background: #fdf6e3;
+      border: 1px solid var(--ui-border);
+      background: var(--btn-surface);
       border-radius: 10px;
       padding: 4px 10px;
       font-size: 12px;
-      color: var(--ink);
+      color: var(--ui-text-active);
       cursor: pointer;
       transition: border-color 120ms ease, transform 120ms ease, box-shadow 120ms ease;
     }
     .size-btn:hover {
-      border-color: rgba(38,139,210,0.45);
-      box-shadow: 0 6px 14px rgba(38,139,210,0.16);
+      border-color: var(--ui-hover-border);
+      box-shadow: var(--ui-hover-shadow);
       transform: translateY(-1px);
     }
     .size-btn:disabled {
@@ -219,16 +289,6 @@
       transform: none;
     }
 
-    body.theme-dark .size-btn {
-      color: #eee8d5;
-      background: #073642;
-      border-color: rgba(147, 161, 161, 0.35);
-    }
-
-    body.theme-dark .size-btn:hover {
-      border-color: rgba(147, 161, 161, 0.55);
-      box-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
-    }
 
     .footer {
       color: var(--muted);
@@ -274,8 +334,8 @@
     }
 
     .footer-link:hover {
-      color: #1f6fa8;
-      border-color: rgba(38,139,210,0.5);
+      color: var(--accent);
+      border-color: var(--accent);
     }
 
     .card {
@@ -300,7 +360,7 @@
       position: absolute;
       width: 260px;
       height: 260px;
-      background: conic-gradient(from 140deg, rgba(38,139,210,0.14), rgba(42,161,152,0.12), rgba(38,139,210,0.14));
+      background: conic-gradient(from 140deg, var(--card-glow-1), var(--card-glow-2), var(--card-glow-1));
       border-radius: 50%;
       top: -120px;
       right: -120px;
@@ -309,7 +369,7 @@
     }
 
     body.theme-dark .card::before {
-      background: conic-gradient(from 140deg, rgba(38,139,210,0.2), rgba(203,75,22,0.18), rgba(38,139,210,0.2));
+      background: conic-gradient(from 140deg, var(--card-glow-1), var(--card-glow-2), var(--card-glow-1));
     }
 
     .ui-half .footer,
@@ -449,23 +509,16 @@
       width: var(--box-size);
       height: var(--box-size);
       border-radius: 8px;
-      border: 1px solid var(--line);
-      background: #fdf6e3;
+      border: 1px solid var(--ui-border);
+      background: var(--box-surface);
       display: grid;
       place-items: center;
       font-family: "PdfConsolas", "Consolas", "SFMono-Regular", "Menlo", monospace;
       font-size: var(--box-font);
       font-weight: 600;
       text-transform: lowercase;
-      color: var(--ink);
+      color: var(--box-text);
       box-shadow: inset 0 0 0 1px rgba(31,42,36,0.02);
-    }
-
-    body.theme-dark .code-box {
-      background: #586e75;
-      border-color: rgba(238, 232, 213, 0.2);
-      color: #fdf6e3;
-      box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.12);
     }
 
     .reveal {
@@ -553,7 +606,7 @@
     }
   </style>
 </head>
-<body>
+<body class="theme-solarized">
   <div class="app">
     <header>
       <div class="title">虎码字根练习</div>
@@ -566,6 +619,10 @@
           <div class="mode-switch" role="group" aria-label="主题">
             <button class="mode-btn is-active" id="themeLight" type="button" aria-pressed="true">白</button>
             <button class="mode-btn" id="themeDark" type="button" aria-pressed="false">黑</button>
+          </div>
+          <div class="mode-switch" role="group" aria-label="配色">
+            <button class="mode-btn is-active" id="paletteSolarized" type="button" aria-pressed="true">Solarized</button>
+            <button class="mode-btn" id="paletteNord" type="button" aria-pressed="false">Nord</button>
           </div>
           <div class="mode-switch" role="group" aria-label="界面显示">
             <button class="mode-btn is-active" id="uiShow" type="button" aria-pressed="true">不隐</button>
@@ -643,6 +700,8 @@
     const uiFullBtn = document.getElementById('uiFull');
     const themeLightBtn = document.getElementById('themeLight');
     const themeDarkBtn = document.getElementById('themeDark');
+    const paletteSolarizedBtn = document.getElementById('paletteSolarized');
+    const paletteNordBtn = document.getElementById('paletteNord');
     const sizeDownBtn = document.getElementById('sizeDown');
     const sizeUpBtn = document.getElementById('sizeUp');
 
@@ -660,7 +719,8 @@
     let reviewEnabled = practiceMode !== 'review';
     let learningMode = practiceMode === 'learning';
     let uiMode = 'show';
-    let themeMode = 'light';
+    let schemeMode = 'light';
+    let paletteMode = 'solarized';
     let reviewQueue = [];
     const reviewState = new Map();
     const completedSet = new Set();
@@ -1080,21 +1140,41 @@
 
     function updateThemeButtons() {
       if (themeLightBtn) {
-        const active = themeMode === 'light';
+        const active = schemeMode === 'light';
         themeLightBtn.classList.toggle('is-active', active);
         themeLightBtn.setAttribute('aria-pressed', String(active));
       }
       if (themeDarkBtn) {
-        const active = themeMode === 'dark';
+        const active = schemeMode === 'dark';
         themeDarkBtn.classList.toggle('is-active', active);
         themeDarkBtn.setAttribute('aria-pressed', String(active));
       }
     }
 
-    function setThemeMode(nextMode) {
-      themeMode = nextMode;
-      document.body.classList.toggle('theme-dark', themeMode === 'dark');
+    function updatePaletteButtons() {
+      if (paletteSolarizedBtn) {
+        const active = paletteMode === 'solarized';
+        paletteSolarizedBtn.classList.toggle('is-active', active);
+        paletteSolarizedBtn.setAttribute('aria-pressed', String(active));
+      }
+      if (paletteNordBtn) {
+        const active = paletteMode === 'nord';
+        paletteNordBtn.classList.toggle('is-active', active);
+        paletteNordBtn.setAttribute('aria-pressed', String(active));
+      }
+    }
+
+    function setSchemeMode(nextMode) {
+      schemeMode = nextMode;
+      document.body.classList.toggle('theme-dark', schemeMode === 'dark');
       updateThemeButtons();
+    }
+
+    function setPaletteMode(nextMode) {
+      paletteMode = nextMode;
+      document.body.classList.toggle('theme-solarized', paletteMode === 'solarized');
+      document.body.classList.toggle('theme-nord', paletteMode === 'nord');
+      updatePaletteButtons();
     }
 
     function setMode(nextMode) {
@@ -1254,8 +1334,13 @@
     }
 
     if (themeLightBtn && themeDarkBtn) {
-      themeLightBtn.addEventListener('click', () => setThemeMode('light'));
-      themeDarkBtn.addEventListener('click', () => setThemeMode('dark'));
+      themeLightBtn.addEventListener('click', () => setSchemeMode('light'));
+      themeDarkBtn.addEventListener('click', () => setSchemeMode('dark'));
+    }
+
+    if (paletteSolarizedBtn && paletteNordBtn) {
+      paletteSolarizedBtn.addEventListener('click', () => setPaletteMode('solarized'));
+      paletteNordBtn.addEventListener('click', () => setPaletteMode('nord'));
     }
 
     if (sizeDownBtn && sizeUpBtn) {
@@ -1273,7 +1358,8 @@
     syncPracticeState(practiceMode);
     updatePracticeButtons();
     setUiMode(uiMode);
-    setThemeMode(themeMode);
+    setPaletteMode(paletteMode);
+    setSchemeMode(schemeMode);
 
     const CURSOR_HIDE_DELAY = 1500;
     let cursorTimer = null;
