Add more color palettes

--- a/index.html
+++ b/index.html
@@ -128,6 +128,296 @@
       --box-text: #eceff4;
     }
 
+    body.theme-catppuccin {
+      --bg1: #eff1f5;
+      --bg2: #e6e9ef;
+      --ink: #4c4f69;
+      --muted: #6c6f85;
+      --accent: #1e66f5;
+      --accent-2: #179299;
+      --card: #e6e9ef;
+      --line: rgba(76,79,105,0.18);
+      --good: #40a02b;
+      --bad: #d20f39;
+      --shadow: 0 20px 50px rgba(76,79,105,0.18);
+      --glow-1: rgba(30,102,245,0.14);
+      --glow-2: rgba(220,138,120,0.12);
+      --card-glow-1: rgba(30,102,245,0.14);
+      --card-glow-2: rgba(23,146,153,0.12);
+      --ui-surface: rgba(239,241,245,0.8);
+      --ui-surface-active: #eff1f5;
+      --ui-border: rgba(76,79,105,0.18);
+      --ui-text: #6c6f85;
+      --ui-text-active: #4c4f69;
+      --ui-shadow: 0 6px 14px rgba(76,79,105,0.18);
+      --ui-hover-border: rgba(30,102,245,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(30,102,245,0.16);
+      --btn-surface: #eff1f5;
+      --box-surface: #eff1f5;
+      --box-text: #4c4f69;
+    }
+
+    body.theme-catppuccin.theme-dark {
+      --bg1: #1e1e2e;
+      --bg2: #181825;
+      --ink: #cdd6f4;
+      --muted: #a6adc8;
+      --accent: #89b4fa;
+      --accent-2: #94e2d5;
+      --card: #313244;
+      --line: rgba(205,214,244,0.14);
+      --good: #a6e3a1;
+      --bad: #f38ba8;
+      --shadow: 0 24px 60px rgba(0, 0, 0, 0.5);
+      --glow-1: rgba(137,180,250,0.18);
+      --glow-2: rgba(250,179,135,0.16);
+      --card-glow-1: rgba(137,180,250,0.2);
+      --card-glow-2: rgba(148,226,213,0.16);
+      --ui-surface: rgba(49,50,68,0.9);
+      --ui-surface-active: #45475a;
+      --ui-border: rgba(205,214,244,0.18);
+      --ui-text: #a6adc8;
+      --ui-text-active: #cdd6f4;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(137,180,250,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #45475a;
+      --box-surface: #45475a;
+      --box-text: #cdd6f4;
+    }
+
+    body.theme-gruvbox {
+      --bg1: #fbf1c7;
+      --bg2: #ebdbb2;
+      --ink: #3c3836;
+      --muted: #665c54;
+      --accent: #458588;
+      --accent-2: #689d6a;
+      --card: #f2e5bc;
+      --line: rgba(60,56,54,0.2);
+      --good: #98971a;
+      --bad: #cc241d;
+      --shadow: 0 20px 50px rgba(60,56,54,0.18);
+      --glow-1: rgba(69,133,136,0.16);
+      --glow-2: rgba(214,93,14,0.12);
+      --card-glow-1: rgba(69,133,136,0.16);
+      --card-glow-2: rgba(104,157,106,0.12);
+      --ui-surface: rgba(251,241,199,0.78);
+      --ui-surface-active: #fbf1c7;
+      --ui-border: rgba(60,56,54,0.2);
+      --ui-text: #665c54;
+      --ui-text-active: #3c3836;
+      --ui-shadow: 0 6px 14px rgba(60,56,54,0.18);
+      --ui-hover-border: rgba(69,133,136,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(69,133,136,0.16);
+      --btn-surface: #fbf1c7;
+      --box-surface: #fbf1c7;
+      --box-text: #3c3836;
+    }
+
+    body.theme-gruvbox.theme-dark {
+      --bg1: #282828;
+      --bg2: #3c3836;
+      --ink: #ebdbb2;
+      --muted: #d5c4a1;
+      --accent: #83a598;
+      --accent-2: #8ec07c;
+      --card: #32302f;
+      --line: rgba(235,219,178,0.14);
+      --good: #b8bb26;
+      --bad: #fb4934;
+      --shadow: 0 24px 60px rgba(0, 0, 0, 0.5);
+      --glow-1: rgba(131,165,152,0.18);
+      --glow-2: rgba(214,93,14,0.16);
+      --card-glow-1: rgba(131,165,152,0.2);
+      --card-glow-2: rgba(214,93,14,0.18);
+      --ui-surface: rgba(50,48,47,0.9);
+      --ui-surface-active: #3c3836;
+      --ui-border: rgba(235,219,178,0.18);
+      --ui-text: #d5c4a1;
+      --ui-text-active: #ebdbb2;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(131,165,152,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #3c3836;
+      --box-surface: #3c3836;
+      --box-text: #ebdbb2;
+    }
+
+    body.theme-tokyonight {
+      --bg1: #e1e2e7;
+      --bg2: #c4c8da;
+      --ink: #3760bf;
+      --muted: #6172b0;
+      --accent: #2e7de9;
+      --accent-2: #1abc9c;
+      --card: #d6d7dc;
+      --line: rgba(55,96,191,0.2);
+      --good: #587539;
+      --bad: #f52a65;
+      --shadow: 0 20px 50px rgba(55,96,191,0.18);
+      --glow-1: rgba(46,125,233,0.16);
+      --glow-2: rgba(245,42,101,0.12);
+      --card-glow-1: rgba(46,125,233,0.16);
+      --card-glow-2: rgba(26,188,156,0.12);
+      --ui-surface: rgba(225,226,231,0.78);
+      --ui-surface-active: #e1e2e7;
+      --ui-border: rgba(55,96,191,0.2);
+      --ui-text: #6172b0;
+      --ui-text-active: #3760bf;
+      --ui-shadow: 0 6px 14px rgba(55,96,191,0.18);
+      --ui-hover-border: rgba(46,125,233,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(46,125,233,0.16);
+      --btn-surface: #e1e2e7;
+      --box-surface: #e1e2e7;
+      --box-text: #3760bf;
+    }
+
+    body.theme-tokyonight.theme-dark {
+      --bg1: #1a1b26;
+      --bg2: #24283b;
+      --ink: #c0caf5;
+      --muted: #a9b1d6;
+      --accent: #7aa2f7;
+      --accent-2: #7dcfff;
+      --card: #2f334d;
+      --line: rgba(192,202,245,0.14);
+      --good: #9ece6a;
+      --bad: #f7768e;
+      --shadow: 0 24px 60px rgba(0, 0, 0, 0.5);
+      --glow-1: rgba(122,162,247,0.18);
+      --glow-2: rgba(247,118,142,0.14);
+      --card-glow-1: rgba(122,162,247,0.2);
+      --card-glow-2: rgba(125,207,255,0.16);
+      --ui-surface: rgba(47,51,77,0.9);
+      --ui-surface-active: #3b4261;
+      --ui-border: rgba(192,202,245,0.18);
+      --ui-text: #a9b1d6;
+      --ui-text-active: #c0caf5;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(122,162,247,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #3b4261;
+      --box-surface: #3b4261;
+      --box-text: #c0caf5;
+    }
+
+    body.theme-rosepine {
+      --bg1: #faf4ed;
+      --bg2: #f2e9e1;
+      --ink: #575279;
+      --muted: #6e6a86;
+      --accent: #286983;
+      --accent-2: #d7827e;
+      --card: #fffaf3;
+      --line: rgba(87,82,121,0.18);
+      --good: #56949f;
+      --bad: #b4637a;
+      --shadow: 0 20px 50px rgba(87,82,121,0.18);
+      --glow-1: rgba(40,105,131,0.14);
+      --glow-2: rgba(215,130,126,0.12);
+      --card-glow-1: rgba(40,105,131,0.14);
+      --card-glow-2: rgba(215,130,126,0.12);
+      --ui-surface: rgba(250,244,237,0.8);
+      --ui-surface-active: #faf4ed;
+      --ui-border: rgba(87,82,121,0.18);
+      --ui-text: #6e6a86;
+      --ui-text-active: #575279;
+      --ui-shadow: 0 6px 14px rgba(87,82,121,0.18);
+      --ui-hover-border: rgba(40,105,131,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(40,105,131,0.16);
+      --btn-surface: #faf4ed;
+      --box-surface: #faf4ed;
+      --box-text: #575279;
+    }
+
+    body.theme-rosepine.theme-dark {
+      --bg1: #232136;
+      --bg2: #2a273f;
+      --ink: #e0def4;
+      --muted: #908caa;
+      --accent: #3e8fb0;
+      --accent-2: #ea9a97;
+      --card: #393552;
+      --line: rgba(224,222,244,0.14);
+      --good: #9ccfd8;
+      --bad: #eb6f92;
+      --shadow: 0 24px 60px rgba(0, 0, 0, 0.45);
+      --glow-1: rgba(62,143,176,0.18);
+      --glow-2: rgba(235,111,146,0.16);
+      --card-glow-1: rgba(62,143,176,0.2);
+      --card-glow-2: rgba(234,154,151,0.16);
+      --ui-surface: rgba(57,53,82,0.9);
+      --ui-surface-active: #4a4566;
+      --ui-border: rgba(224,222,244,0.18);
+      --ui-text: #908caa;
+      --ui-text-active: #e0def4;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(62,143,176,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #4a4566;
+      --box-surface: #4a4566;
+      --box-text: #e0def4;
+    }
+
+    body.theme-one {
+      --bg1: #fafafa;
+      --bg2: #f0f0f0;
+      --ink: #383a42;
+      --muted: #5c6370;
+      --accent: #4078f2;
+      --accent-2: #56b6c2;
+      --card: #ffffff;
+      --line: rgba(56,58,66,0.18);
+      --good: #50a14f;
+      --bad: #e45649;
+      --shadow: 0 20px 50px rgba(56,58,66,0.18);
+      --glow-1: rgba(64,120,242,0.14);
+      --glow-2: rgba(228,86,73,0.12);
+      --card-glow-1: rgba(64,120,242,0.14);
+      --card-glow-2: rgba(86,182,194,0.12);
+      --ui-surface: rgba(250,250,250,0.8);
+      --ui-surface-active: #fafafa;
+      --ui-border: rgba(56,58,66,0.18);
+      --ui-text: #5c6370;
+      --ui-text-active: #383a42;
+      --ui-shadow: 0 6px 14px rgba(56,58,66,0.18);
+      --ui-hover-border: rgba(64,120,242,0.45);
+      --ui-hover-shadow: 0 6px 14px rgba(64,120,242,0.16);
+      --btn-surface: #fafafa;
+      --box-surface: #fafafa;
+      --box-text: #383a42;
+    }
+
+    body.theme-one.theme-dark {
+      --bg1: #282c34;
+      --bg2: #21252b;
+      --ink: #abb2bf;
+      --muted: #7f848e;
+      --accent: #61afef;
+      --accent-2: #56b6c2;
+      --card: #2c313c;
+      --line: rgba(171,178,191,0.14);
+      --good: #98c379;
+      --bad: #e06c75;
+      --shadow: 0 24px 60px rgba(0, 0, 0, 0.5);
+      --glow-1: rgba(97,175,239,0.18);
+      --glow-2: rgba(224,108,117,0.16);
+      --card-glow-1: rgba(97,175,239,0.2);
+      --card-glow-2: rgba(86,182,194,0.16);
+      --ui-surface: rgba(44,49,60,0.9);
+      --ui-surface-active: #3a404c;
+      --ui-border: rgba(171,178,191,0.18);
+      --ui-text: #7f848e;
+      --ui-text-active: #abb2bf;
+      --ui-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --ui-hover-border: rgba(97,175,239,0.55);
+      --ui-hover-shadow: 0 6px 14px rgba(0, 0, 0, 0.28);
+      --btn-surface: #3a404c;
+      --box-surface: #3a404c;
+      --box-text: #abb2bf;
+    }
+
     @font-face {
       font-family: "PdfSimSun";
       src: url("./fonts/BAAAAA_SimSun.ttf") format("truetype");
@@ -623,6 +913,11 @@
           <div class="mode-switch" role="group" aria-label="配色">
             <button class="mode-btn is-active" id="paletteSolarized" type="button" aria-pressed="true">Solarized</button>
             <button class="mode-btn" id="paletteNord" type="button" aria-pressed="false">Nord</button>
+            <button class="mode-btn" id="paletteCatppuccin" type="button" aria-pressed="false">Catppuccin</button>
+            <button class="mode-btn" id="paletteGruvbox" type="button" aria-pressed="false">Gruvbox</button>
+            <button class="mode-btn" id="paletteTokyo" type="button" aria-pressed="false">Tokyo</button>
+            <button class="mode-btn" id="paletteRose" type="button" aria-pressed="false">Rose</button>
+            <button class="mode-btn" id="paletteOne" type="button" aria-pressed="false">One</button>
           </div>
           <div class="mode-switch" role="group" aria-label="界面显示">
             <button class="mode-btn is-active" id="uiShow" type="button" aria-pressed="true">不隐</button>
@@ -702,6 +997,11 @@
     const themeDarkBtn = document.getElementById('themeDark');
     const paletteSolarizedBtn = document.getElementById('paletteSolarized');
     const paletteNordBtn = document.getElementById('paletteNord');
+    const paletteCatppuccinBtn = document.getElementById('paletteCatppuccin');
+    const paletteGruvboxBtn = document.getElementById('paletteGruvbox');
+    const paletteTokyoBtn = document.getElementById('paletteTokyo');
+    const paletteRoseBtn = document.getElementById('paletteRose');
+    const paletteOneBtn = document.getElementById('paletteOne');
     const sizeDownBtn = document.getElementById('sizeDown');
     const sizeUpBtn = document.getElementById('sizeUp');
 
@@ -1162,6 +1462,31 @@
         paletteNordBtn.classList.toggle('is-active', active);
         paletteNordBtn.setAttribute('aria-pressed', String(active));
       }
+      if (paletteCatppuccinBtn) {
+        const active = paletteMode === 'catppuccin';
+        paletteCatppuccinBtn.classList.toggle('is-active', active);
+        paletteCatppuccinBtn.setAttribute('aria-pressed', String(active));
+      }
+      if (paletteGruvboxBtn) {
+        const active = paletteMode === 'gruvbox';
+        paletteGruvboxBtn.classList.toggle('is-active', active);
+        paletteGruvboxBtn.setAttribute('aria-pressed', String(active));
+      }
+      if (paletteTokyoBtn) {
+        const active = paletteMode === 'tokyonight';
+        paletteTokyoBtn.classList.toggle('is-active', active);
+        paletteTokyoBtn.setAttribute('aria-pressed', String(active));
+      }
+      if (paletteRoseBtn) {
+        const active = paletteMode === 'rosepine';
+        paletteRoseBtn.classList.toggle('is-active', active);
+        paletteRoseBtn.setAttribute('aria-pressed', String(active));
+      }
+      if (paletteOneBtn) {
+        const active = paletteMode === 'one';
+        paletteOneBtn.classList.toggle('is-active', active);
+        paletteOneBtn.setAttribute('aria-pressed', String(active));
+      }
     }
 
     function setSchemeMode(nextMode) {
@@ -1172,8 +1497,10 @@
 
     function setPaletteMode(nextMode) {
       paletteMode = nextMode;
-      document.body.classList.toggle('theme-solarized', paletteMode === 'solarized');
-      document.body.classList.toggle('theme-nord', paletteMode === 'nord');
+      const palettes = ['solarized', 'nord', 'catppuccin', 'gruvbox', 'tokyonight', 'rosepine', 'one'];
+      palettes.forEach((name) => {
+        document.body.classList.toggle(`theme-${name}`, name === paletteMode);
+      });
       updatePaletteButtons();
     }
 
@@ -1338,9 +1665,14 @@
       themeDarkBtn.addEventListener('click', () => setSchemeMode('dark'));
     }
 
-    if (paletteSolarizedBtn && paletteNordBtn) {
+    if (paletteSolarizedBtn && paletteNordBtn && paletteCatppuccinBtn && paletteGruvboxBtn && paletteTokyoBtn && paletteRoseBtn && paletteOneBtn) {
       paletteSolarizedBtn.addEventListener('click', () => setPaletteMode('solarized'));
       paletteNordBtn.addEventListener('click', () => setPaletteMode('nord'));
+      paletteCatppuccinBtn.addEventListener('click', () => setPaletteMode('catppuccin'));
+      paletteGruvboxBtn.addEventListener('click', () => setPaletteMode('gruvbox'));
+      paletteTokyoBtn.addEventListener('click', () => setPaletteMode('tokyonight'));
+      paletteRoseBtn.addEventListener('click', () => setPaletteMode('rosepine'));
+      paletteOneBtn.addEventListener('click', () => setPaletteMode('one'));
     }
 
     if (sizeDownBtn && sizeUpBtn) {
