--- a/index.html
+++ b/index.html
@@ -579,6 +579,16 @@
       transform: none;
     }
 
+    .palette-select select {
+      border: 1px solid var(--ui-border);
+      background: var(--btn-surface);
+      border-radius: 10px;
+      padding: 4px 10px;
+      font-size: 12px;
+      color: var(--ui-text-active);
+      cursor: pointer;
+    }
+
 
     .footer {
       color: var(--muted);
@@ -910,15 +920,17 @@
             <button class="mode-btn is-active" id="themeLight" type="button" aria-pressed="true">白</button>
             <button class="mode-btn" id="themeDark" type="button" aria-pressed="false">黑</button>
           </div>
-          <div class="mode-switch" role="group" aria-label="配色">
-            <button class="mode-btn is-active" id="paletteSolarized" type="button" aria-pressed="true">Solarized</button>
-            <button class="mode-btn" id="paletteNord" type="button" aria-pressed="false">Nord</button>
-            <button class="mode-btn" id="paletteCatppuccin" type="button" aria-pressed="false">Catppuccin</button>
-            <button class="mode-btn" id="paletteGruvbox" type="button" aria-pressed="false">Gruvbox</button>
-            <button class="mode-btn" id="paletteTokyo" type="button" aria-pressed="false">Tokyo</button>
-            <button class="mode-btn" id="paletteRose" type="button" aria-pressed="false">Rose</button>
-            <button class="mode-btn" id="paletteOne" type="button" aria-pressed="false">One</button>
-          </div>
+          <label class="palette-select" aria-label="配色">
+            <select id="paletteSelect" aria-label="配色">
+              <option value="solarized">Solarized</option>
+              <option value="nord">Nord</option>
+              <option value="catppuccin">Catppuccin</option>
+              <option value="gruvbox">Gruvbox</option>
+              <option value="tokyonight">Tokyo</option>
+              <option value="rosepine">Rose</option>
+              <option value="one">One</option>
+            </select>
+          </label>
           <div class="mode-switch" role="group" aria-label="界面显示">
             <button class="mode-btn is-active" id="uiShow" type="button" aria-pressed="true">不隐</button>
             <button class="mode-btn" id="uiHalf" type="button" aria-pressed="false">半隐</button>
@@ -995,13 +1007,7 @@
     const uiFullBtn = document.getElementById('uiFull');
     const themeLightBtn = document.getElementById('themeLight');
     const themeDarkBtn = document.getElementById('themeDark');
-    const paletteSolarizedBtn = document.getElementById('paletteSolarized');
-    const paletteNordBtn = document.getElementById('paletteNord');
-    const paletteCatppuccinBtn = document.getElementById('paletteCatppuccin');
-    const paletteGruvboxBtn = document.getElementById('paletteGruvbox');
-    const paletteTokyoBtn = document.getElementById('paletteTokyo');
-    const paletteRoseBtn = document.getElementById('paletteRose');
-    const paletteOneBtn = document.getElementById('paletteOne');
+    const paletteSelect = document.getElementById('paletteSelect');
     const sizeDownBtn = document.getElementById('sizeDown');
     const sizeUpBtn = document.getElementById('sizeUp');
 
@@ -1451,42 +1457,9 @@
       }
     }
 
-    function updatePaletteButtons() {
-      if (paletteSolarizedBtn) {
-        const active = paletteMode === 'solarized';
-        paletteSolarizedBtn.classList.toggle('is-active', active);
-        paletteSolarizedBtn.setAttribute('aria-pressed', String(active));
-      }
-      if (paletteNordBtn) {
-        const active = paletteMode === 'nord';
-        paletteNordBtn.classList.toggle('is-active', active);
-        paletteNordBtn.setAttribute('aria-pressed', String(active));
-      }
-      if (paletteCatppuccinBtn) {
-        const active = paletteMode === 'catppuccin';
-        paletteCatppuccinBtn.classList.toggle('is-active', active);
-        paletteCatppuccinBtn.setAttribute('aria-pressed', String(active));
-      }
-      if (paletteGruvboxBtn) {
-        const active = paletteMode === 'gruvbox';
-        paletteGruvboxBtn.classList.toggle('is-active', active);
-        paletteGruvboxBtn.setAttribute('aria-pressed', String(active));
-      }
-      if (paletteTokyoBtn) {
-        const active = paletteMode === 'tokyonight';
-        paletteTokyoBtn.classList.toggle('is-active', active);
-        paletteTokyoBtn.setAttribute('aria-pressed', String(active));
-      }
-      if (paletteRoseBtn) {
-        const active = paletteMode === 'rosepine';
-        paletteRoseBtn.classList.toggle('is-active', active);
-        paletteRoseBtn.setAttribute('aria-pressed', String(active));
-      }
-      if (paletteOneBtn) {
-        const active = paletteMode === 'one';
-        paletteOneBtn.classList.toggle('is-active', active);
-        paletteOneBtn.setAttribute('aria-pressed', String(active));
-      }
+    function updatePaletteSelect() {
+      if (!paletteSelect) return;
+      paletteSelect.value = paletteMode;
     }
 
     function setSchemeMode(nextMode) {
@@ -1501,7 +1474,7 @@
       palettes.forEach((name) => {
         document.body.classList.toggle(`theme-${name}`, name === paletteMode);
       });
-      updatePaletteButtons();
+      updatePaletteSelect();
     }
 
     function setMode(nextMode) {
@@ -1665,14 +1638,8 @@
       themeDarkBtn.addEventListener('click', () => setSchemeMode('dark'));
     }
 
-    if (paletteSolarizedBtn && paletteNordBtn && paletteCatppuccinBtn && paletteGruvboxBtn && paletteTokyoBtn && paletteRoseBtn && paletteOneBtn) {
-      paletteSolarizedBtn.addEventListener('click', () => setPaletteMode('solarized'));
-      paletteNordBtn.addEventListener('click', () => setPaletteMode('nord'));
-      paletteCatppuccinBtn.addEventListener('click', () => setPaletteMode('catppuccin'));
-      paletteGruvboxBtn.addEventListener('click', () => setPaletteMode('gruvbox'));
-      paletteTokyoBtn.addEventListener('click', () => setPaletteMode('tokyonight'));
-      paletteRoseBtn.addEventListener('click', () => setPaletteMode('rosepine'));
-      paletteOneBtn.addEventListener('click', () => setPaletteMode('one'));
+    if (paletteSelect) {
+      paletteSelect.addEventListener('change', (e) => setPaletteMode(e.target.value));
     }
 
     if (sizeDownBtn && sizeUpBtn) {
